log
Compiling 1 file (.ex)
Compiling crate julia_ex in release mode (native/julia_ex)
   Compiling proc-macro2 v1.0.86
   Compiling unicode-ident v1.0.12
   Compiling memchr v2.7.4
   Compiling regex-syntax v0.8.4
   Compiling shlex v1.3.0
   Compiling libc v0.2.157
   Compiling aho-corasick v1.1.3
   Compiling autocfg v1.3.0
   Compiling quote v1.0.36
   Compiling lock_api v0.4.12
   Compiling syn v2.0.75
   Compiling cc v1.1.13
   Compiling regex-automata v0.4.7
   Compiling cfg-if v1.0.0
   Compiling parking_lot_core v0.9.10
   Compiling jl-sys v0.25.0
   Compiling thiserror v1.0.63
   Compiling void v1.0.2
   Compiling either v1.13.0
   Compiling smallvec v1.13.2
   Compiling scopeguard v1.2.0
   Compiling itertools v0.13.0
   Compiling unreachable v1.0.0
   Compiling regex v1.10.6
   Compiling bytemuck v1.17.0
   Compiling rustler v0.29.1
   Compiling heck v0.4.1
   Compiling atomic v0.6.0
   Compiling parking_lot v0.12.3
   Compiling fnv v1.0.7
   Compiling rustler_sys v2.3.2
   Compiling lazy_static v1.5.0
   Compiling once_cell v1.19.0
   Compiling rustc-hash v2.0.0
   Compiling thiserror-impl v1.0.63
   Compiling jlrs-macros v0.4.0
   Compiling rustler_codegen v0.29.1
   Compiling jlrs v0.21.0
   Compiling julia_ex v0.1.0 (/home/samrose/elixir-julia/native/julia_ex)
error[E0433]: failed to resolve: could not find `on_load` in `rustler`
  --> src/lib.rs:20:12
   |
20 | #[rustler::on_load]
   |            ^^^^^^^ could not find `on_load` in `rustler`

error[E0412]: cannot find type `Julia` in this scope
 --> src/lib.rs:4:26
  |
4 | static mut JULIA: Option<Julia> = None;
  |                          ^^^^^ not found in this scope

error[E0433]: failed to resolve: use of undeclared type `Julia`
  --> src/lib.rs:23:22
   |
23 |         JULIA = Some(Julia::init().unwrap());
   |                      ^^^^^ use of undeclared type `Julia`

Some errors have detailed explanations: E0412, E0433.
For more information about an error, try `rustc --explain E0412`.
error: could not compile `julia_ex` (lib) due to 3 previous errors
